# cabed-llm-bayesian-design-paper-2025

./: README.md
ca-bed-master-code/: direct_prompting_method.py  eval.py  globals.py  history.py  main.py  method.py  models.py  node.py  pyproject.toml  question_clustering.py  rewards.py
ca-bed-master-code/tasks/: direct_prompting_task.py  tree_task.py
ca-bed-master-code/tasks/detective_cases/: ARBenchTest.json  bayesian.py  bayesian_multi.py  common.py  data.py  direct.py  uot.py
ca-bed-master-code/tasks/twenty_questions/: bayesian.py  bayesian_multi.py  data.py  direct.py  uot.py
