[project]
name = "uot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "hf-xet>=1.1.10",
    "openai>=1.101.0",
    "sentence-transformers[onnx]>=5.1.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "voyager>=2.1.0",
]
